<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/character_detail_image_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:scaleType="fitXY"
        tools:src="@drawable/ic_marvel_logo" />

    <ImageView
        android:id="@+id/character_detail_favorite_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@id/character_detail_image_view"
        app:layout_constraintEnd_toEndOf="@id/character_detail_image_view"
        tools:src="@drawable/ic_favorite_on" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/character_detail_image_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/character_detail_description_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="The frail, dwarfish Arnim Zola was born in 1930s Switzerland where he became the world's leading biochemist and genetic engineer." />

            <TextView
                android:id="@+id/character_detail_comics_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/comics"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/character_detail_description_text_view" />

            <ProgressBar
                android:id="@+id/character_detail_comics_progressbar"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_detail_comics_text_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/character_detail_comics_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minHeight="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_detail_comics_text_view" />

            <TextView
                android:id="@+id/character_detail_comics_emptystate_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_state_media_message"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/character_detail_comics_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/character_detail_comics_recycler_view"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/character_detail_series_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/series"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/character_detail_comics_recycler_view"
                app:layout_goneMarginTop="16dp" />

            <ProgressBar
                android:id="@+id/character_detail_series_progressbar"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_detail_series_text_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/character_detail_series_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minHeight="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_detail_series_text_view" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/character_detail_comics_error_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/character_detail_comics_recycler_view"
                app:layout_constraintTop_toTopOf="@id/character_detail_comics_recycler_view">

                <TextView
                    android:id="@+id/character_detail_comics_error_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comics_load_error"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/character_detail_comics_retry_button"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="?attr/colorPrimary"
                    android:text="@string/try_again"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/character_detail_comics_error_textview" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/character_detail_series_error_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/character_detail_series_recycler_view"
                app:layout_constraintTop_toTopOf="@id/character_detail_series_recycler_view">

                <TextView
                    android:id="@+id/character_detail_series_error_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/series_load_error"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/character_detail_series_retry_button"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="?attr/colorPrimary"
                    android:text="@string/try_again"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/character_detail_series_error_textview" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/character_detail_series_emptystate_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_state_media_message"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/character_detail_series_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/character_detail_series_recycler_view"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>